# FsEventBridge

./: .clang-format  .editorconfig  .gitignore  CHANGELOG.md  CMakeLists.txt  DEVELOPMENT_PLAN.md  Dockerfile  README.md
.github/workflows/: ci.yml  release.yml
configs/: config.toml
docs/: README.en.md  README.md
include/: fseventbridge.h
package/: FsEventBridge.service  fseventbridge.service  postinst  postrm  prerm
scripts/: build.sh  cpack.sh  docker_run.sh  setup_env.sh
src/: config_loader.c  ipc_uds.c  main.c  monitor.c  utils.c
tests/: README.md  run.sh  test_client.py
tests/fixtures/: basic.toml  compat_keys.toml  empty_events.toml  invalid.toml
tests/lib/: common.sh  listener.py
tests/milestone0/e2e/: 01_close_write.sh  02_exclude_path.sh  03_exclude_ext.sh  04_strip_fid_required.sh
tests/milestone0/unit/: 01_help.sh  02_version.sh  03_default_config.sh  04_toml_basic.sh  05_toml_compat_keys.sh  06_cli_overrides_toml.sh  07_no_io_uring.sh  08_invalid_config.sh  09_empty_events_fallback.sh  10_logical_scope_mode.sh
tests/milestone1/e2e/: 01_ndjson_semantics.sh
tests/milestone3/e2e/: 01_accept_before_fsevent.sh
tests/milestone4/e2e/: 01_scope_subtree.sh  02_scope_no_recursive.sh
